--- a/Facebook-clone/header.css
+++ b/Facebook-clone/header.css
@@ -1,7 +1,7 @@
 .header{
   height: 60px;
   display: flex;
-  border-bottom: 2px solid #F0F2F5;
+  border-bottom: 1px solid #F0F2F5;
   box-shadow: 0px 1px 10px #d3d5d8;
 }
 
@@ -42,11 +42,41 @@
 
 /* middle section starts from here */
 .middle-section{
-  width: 50%;
-  background-color: burlywood;
+  flex: 1;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+.middle-section .container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 8px 48px;
+  transition: background-color 0.3s;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.middle-section .container:hover{
+  background-color: #F2F2F2;
+}
+
+.tooltip{
+  color: #F0F2F5;
+  background-color: #39393A;
+  padding: 8px 10px;
+  border-radius: 8px;
+  position: absolute;
+  bottom: -47px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  pointer-events: none;
+}
+
+.middle-section .container:hover .tooltip{
+  opacity: 1;
 }
 
 /* right section starts from here */
@@ -64,10 +94,13 @@
   width: 40px;
   border-radius: 50%;
   margin: 0 5px;
+  position: relative;
 }
 
 .right-section>div>img{
-  
+  position: absolute;
+  top: 8px;
+  left: 8px;
 }
 
 .right-section .profile-picture{
@@ -75,5 +108,12 @@
   width: 40px;
   border-radius: 50%;
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.right-section .account-icon{
+  margin-right: 10px;
 }
 
