--- a/Facebook-clone/header.css
+++ b/Facebook-clone/header.css
@@ -7,13 +7,14 @@
   right: 0;
   left: 0;
   top: 0;
+  z-index: 100;
 }
 
 .left-section{
   display: flex;
   align-items: center;
   width: 25%;
-  background-color: powderblue;
+  /* background-color: powderblue; */
 }
 
 .logo{
