--- a/Facebook-clone/right-sidebar.css
+++ b/Facebook-clone/right-sidebar.css
@@ -1,125 +1,3 @@
-.left-sidebar{
-  background-color: #F0F2F5;
-  width: 25%;
-  position: fixed;
-  top: 62px;
-  left: 0;
-  bottom: 0;
-  padding: 15px 6px;
-  overflow-y: scroll;
-  scrollbar-width: thin;
-  scrollbar-color: #F0F2F5 #F0F2F5;
-}
-
-.left-sidebar:hover{
-  scrollbar-color: #D8DADF #F0F2F5;
-}
-
-.left-sidebar .container,
-.left-sidebar .container-2{
-  display: flex;
-  align-items: center;
-  height: 45px;
-  border-radius: 10px;
-  padding: 3px 8px;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 15px;
-}
-
-.left-sidebar .container:hover,
-.left-sidebar .container-2:hover{
-  background-color: #E4E6E9;
-}
-
-.left-sidebar .container img,
-.left-sidebar .container-2 img{
-  height: 38px;
-  width: 38px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.left-sidebar .container .image,
-.left-sidebar .container-2 .image{
-  margin-right: 12px;
-}
-
-.left-sidebar .container .see-more,
-.left-sidebar .container-2 .see-more{
-  background-color: #D8DADF;
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  margin-right: 12px;
-  position: relative;
-}
-
-.left-sidebar .container .see-more img,
-.left-sidebar .container-2 .see-more img{
-  position: absolute;
-  top: 2px;
-  left: -1px;
-}
-
-hr {  
-  margin: 5px 10px 0 10px;
-  height: 1px;  
-  background-color: #d0d1d5;  
-  border: none;  
-}
-
-.left-sidebar .edit{
-  display: flex;
-  justify-content: space-between;
-  padding-left: 10px;
-}
-
-.left-sidebar .text{
-  color: #116AC9;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.left-sidebar .text:hover{
-  background-color: #D8DADF;
-  padding: 0 5px;
-  border-radius: 5px;
-}
-
-
-.left-sidebar .second-part:hover .text{
-  opacity: 1;
-}
-
-.left-sidebar .shortcut:hover{
-  cursor:text;
-}
-
-.more-links{
-  padding: 15px 20px 0 10px;
-}
-.more-links>a{
-  color: #65676B;
-  text-decoration: none;
-  font-size: 12px;
-}
-
-.more-links>a:hover{
-  text-decoration: underline;
-}
-
-.more-links .except:hover{
-  text-decoration: none;
-}
-
-.more-links>span{
-  color: #65676B;
-  font-size: 12px;
-}
-
-
-/* Design of the right-sidebar starts here  */
 /* First-part  */
 .right-sidebar{
   background-color: #F0F2F5;
@@ -133,6 +11,10 @@ hr {
   scrollbar-width: thin;
   scrollbar-color: #F0F2F5 #F0F2F5;
   z-index: -100;
+}
+
+.right-sidebar:hover{
+  scrollbar-color: #BCC0C4 #F0F2F5;
 }
 
 .right-sidebar .first-part .sponsor{
@@ -201,8 +83,43 @@ hr {
   opacity: 1;
 }
 
+.right-sidebar .birthday-container{
+  padding: 10px 10px 5px;
+}
 
-/* Second-part  */
+.right-sidebar .birthday-container .birthday{
+  color: #68696b;
+  font-weight: 500;
+}
+
+.right-sidebar .birthday-container .wishes{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.right-sidebar .birthday-container .wishes:hover{
+  background-color: #E4E6E9;
+  cursor: pointer;
+}
+
+.right-sidebar .birthday-container .wishes .gift-icon>img{
+  height: 30px;
+}
+
+.right-sidebar .birthday-container .wishes .person span{
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.right-sidebar .birthday-container .wishes .person p{
+  font-size: 15px;
+}
+
+
+
+/* Second-part */
 .right-sidebar .second-part .primary-container{
   display: flex;
   justify-content: space-between;
@@ -245,10 +162,14 @@ hr {
   height: 45px;
   border-radius: 10px;
   padding: 5px 8px;
-  cursor: pointer;
   font-weight: 500;
   font-size: 15px;
-  background-color: red;
+}
+
+.right-sidebar .second-part .container:hover,
+.right-sidebar .third-part .container:hover{
+  background-color: #E4E6E9;
+  cursor: pointer;
 }
 
 .right-sidebar .second-part .container .profile-picture{
@@ -274,4 +195,77 @@ hr {
   right: 1px;
   bottom: 1px;
 }
+
+
+/* Third-part */
+.right-sidebar .third-part .group-conversation{
+  padding: 10px;
+  color: #68696b;
+  font-weight: 500;
+}
+.right-sidebar .third-part .container{
+  display: flex;
+  align-items: center;
+  height: 45px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.right-sidebar .third-part .container .group-name{
+  margin-left: 8px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.right-sidebar .third-part .container .secondary-container{
+  border-radius: 50%;
+  position: relative;
+  height: 38px;
+  width: 38px;
+}
+
+.right-sidebar .third-part .container .secondary-container .gourab{
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  z-index: 1;
+  height: 25px;
+}
+
+.right-sidebar .third-part .container .secondary-container .biswanath{
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  height: 25px;
+}
+
+.right-sidebar .third-part .container .secondary-container img{
+  height: 38px;
+  border-radius: 50%;
+}
+
+.right-sidebar .third-part .container .secondary-container .green-dot img{
+  height: 9px;
+  width: 9px;
+  object-fit: contain;
+}
+
+.right-sidebar .third-part .container .secondary-container .green-dot{
+  position: absolute;
+  right: 0;
+  bottom: -5px;
+}
+
+.right-sidebar .third-part .container .secondary-container .add{
+  height: 20px;
+  position: absolute;
+  top: 9px;
+  left: 9px;
+}
+
+.right-sidebar .third-part .container .plus{
+  background-color: #D8DADF;
+}
+
+
 
