The changes which were to be done to the right-sidebar is finally completed.

--- a/Facebook-clone/header.css
+++ b/Facebook-clone/header.css
@@ -77,7 +77,8 @@ input:focus{
 }
 
 /* The tooltip for both middle-section and right-section  */
-.tooltip{
+.middle-section-container .tooltip,
+.right-section-container .tooltip{
   color: #F0F2F5;
   background-color: #39393A;
   padding: 8px 10px;
