--- a/Facebook-clone/general.css
+++ b/Facebook-clone/general.css
@@ -3,5 +3,49 @@ body{
   padding: 0;
   font-family: "Poppins" , sans-serif;
   position: relative;
-  /* height: 2000px; */
 }
+
+.new-message{
+  position: fixed;
+  bottom: 15px;
+  right: 30px;
+}
+
+.new-message .image-text{
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #e2e2e6;
+  box-shadow: 1px 3px 5px #b3b4b7;
+}
+
+.new-message .image-text .image{
+  height: 25px;
+  cursor: pointer;
+  position: absolute;
+  right: 12px;
+  bottom: 12px;
+}
+
+.new-message .image-text .text{
+  width: 90px;
+  background-color: #39393A;
+  color: white;
+  font-size: 13px;
+  padding: 10px;
+  border-radius: 10px;
+  position: absolute;
+  right: 52px;
+  bottom: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s;
+}
+
+.new-message .image-text:hover .text{
+  opacity: 0.9;
+}
+
+
