--- a/Facebook-clone/right-sidebar.css
+++ b/Facebook-clone/right-sidebar.css
@@ -155,12 +155,12 @@
   right: 5px;
   background-color: #39393A;
   color: #F0F2F5;
-  padding: 15px 10px;
+  padding: 10px;
   border-radius: 10px;
   font-size: 13px;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s;
+  transition: opacity 0.5s;
 }
 
 .right-sidebar .second-part .primary-container .search-option .option:hover .tooltip,
