--- a/Facebook-clone/right-sidebar.css
+++ b/Facebook-clone/right-sidebar.css
@@ -18,8 +18,8 @@
 }
 
 .right-sidebar .first-part .sponsor{
-  color: #68696b;
-  font-weight: 500;
+  color: #878789;
+  font-weight: 600;
   margin-left: 10px;
 }
 
@@ -83,13 +83,14 @@
   opacity: 1;
 }
 
+/* Birthday Container */
 .right-sidebar .birthday-container{
   padding: 10px 10px 5px;
 }
 
 .right-sidebar .birthday-container .birthday{
-  color: #68696b;
-  font-weight: 500;
+  color: #878789;
+  font-weight: 600;
 }
 
 .right-sidebar .birthday-container .wishes{
@@ -118,6 +119,120 @@
 }
 
 
+/* New Friend-Request container */
+.right-sidebar .request-container{
+  padding: 10px 10px 5px;
+}
+
+.right-sidebar .request-container .primary-container{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.right-sidebar .request-container .primary-container .request{
+  color: #878789;
+  font-weight: 600;
+}
+
+.right-sidebar .request-container .primary-container .see-all{
+  padding: 5px 10px;
+  padding-top: 2px;
+  border-radius: 5px;
+}
+
+.right-sidebar .request-container .primary-container .see-all:hover{
+  background-color: #D8DADF;
+}
+
+.right-sidebar .request-container .primary-container .see-all a{
+  text-decoration: none;
+  color: rgb(79, 79, 242);
+}
+
+.right-sidebar .request-container .secondary-container{
+  height: 80px;
+  display: grid;
+  grid-template: 1fr/1fr 3fr;
+  gap: 10px;
+  cursor: pointer;
+  padding: 10px 10px;
+  border-radius: 10px;
+}
+
+.right-sidebar .request-container .secondary-container:hover{
+  background-color: #E4E6E9;
+}
+
+.right-sidebar .request-container .secondary-container .profile-picture{
+  background-color: #BFC2C6;
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  position: relative;
+  overflow: clip;
+}
+
+.right-sidebar .request-container .secondary-container .profile-picture .image{
+  height: 75px;
+  position: absolute;
+  bottom: -10px;
+  left: 1px;
+}
+
+.right-sidebar .request-container .secondary-container .about{
+  display: grid;
+  grid-template-rows: repeat(2,1fr);
+}
+
+.right-sidebar .request-container .secondary-container .about .name{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-sidebar .request-container .secondary-container .about .name .entity{
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.right-sidebar .request-container .secondary-container .about .name .days{
+  color: #68696b;
+  letter-spacing: 4px;
+  font-size: 12px;
+}
+
+.right-sidebar .request-container .secondary-container .about .buttons{
+  display: flex;
+  align-items: center;
+}
+
+.right-sidebar .request-container .secondary-container .about .buttons .confirm,
+.right-sidebar .request-container .secondary-container .about .buttons .delete{
+  padding: 10px 35px;
+  border-radius: 10px;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.right-sidebar .confirm{
+  background-color: #0861F2;
+  color: white;
+  font-weight: 700;
+  margin-right: 10px;
+}
+
+.right-sidebar .delete{
+  background-color: #e1e2e4;
+  font-weight: 700;
+}
+
+.right-sidebar .request-container .secondary-container .about .buttons .delete:hover{
+  background-color: #cfd0d3;
+}
+
+
 
 /* Second-part */
 .right-sidebar .second-part .primary-container{
@@ -129,8 +244,8 @@
 }
 
 .right-sidebar .second-part .primary-container .contacts{
-  color: #68696b;
-  font-weight: 500;
+  color: #878789;
+  font-weight: 600;
 }
 
 .right-sidebar .second-part .primary-container .search-option{
@@ -230,8 +345,8 @@
 /* Third-part */
 .right-sidebar .third-part .group-conversation{
   padding: 10px;
-  color: #68696b;
-  font-weight: 500;
+  color: #878789;
+  font-weight:600;
 }
 .right-sidebar .third-part .container{
   display: flex;
@@ -296,6 +411,9 @@
 .right-sidebar .third-part .container .plus{
   background-color: #D8DADF;
 }
+
+
+
 
 
 
