--- a/Facebook-clone/main.css
+++ b/Facebook-clone/main.css
@@ -7,7 +7,6 @@
   right: 25%;
   bottom: 0;
   left: 25%;
-  /* padding: 0 32px; */
 }
 
 #main .section{
@@ -18,6 +17,7 @@
   background-color: #FFFFFF;
   border-radius: 8px;
   padding: 10px;
+  padding-top: 0;
 }
 
 #upload .first-part{
@@ -26,18 +26,39 @@
   padding: 10px;
 }
 
+#upload .profile-picture{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+#upload .input-box{
+  flex: 1;
+  padding-right: 17px;
+}
+
 #upload input{
   padding: 10px;
-  width: 585px;
+  width: 100%;
   border-radius: 50px;
   border: none;
   background-color: #ecf1f7;
   font-size: 20px;
+  cursor: pointer;
+}
+
+#upload input:hover{
+  background-color: #d8e0e3;
 }
 
 #upload .second-part{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  padding: 10px;
+  padding-bottom: 0;
 }
 
 #upload #video,
@@ -45,6 +66,12 @@
 #upload #feelings{
   display: flex;
   align-items: center;
+  color: #5e5e5f;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 0 40px;
+  border-radius: 10px;
 }
 
 #upload .second-part .upload-icon{
@@ -52,10 +79,9 @@
   margin-right: 10px;
 }
 
-#upload .profile-picture{
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 10px;
+#upload #video:hover,
+#upload #photo:hover,
+#upload #feelings:hover{
+  background-color: #F2F2F2;
 }
+
